k8s/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-server
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-server
  template:
    metadata:
      labels:
        app: python-server
    spec:
      containers:
      - name: python-server
        image: whyevenquestion1t/python-server:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
