k8s/2-service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-node-port
  namespace: dev
spec:
  type: NodePort
  selector:
    app: python-server
  ports:
  - port: 80
    targetPort: http
    nodePort: 30001 # range 30000-32767
