k8s/3-service-load-balancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-for-python-server
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: python-server
  ports:
    - port: 80
      targetPort: http
